--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 style="text-align: center; font-size: 100px;">GitHub</h1>
     <p>Hello world!</p>
     <p>Lorem ipsum dolor sit amet.</p>
 </body>
